Testing small changes in cells

--- a/LLC-Luigi-Workflow.ipynb
+++ b/LLC-Luigi-Workflow.ipynb
@@ -22,8 +22,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:56.004602Z",
-     "start_time": "2020-04-23T10:45:55.998523Z"
+     "end_time": "2020-04-23T13:08:40.075778Z",
+     "start_time": "2020-04-23T13:08:40.069532Z"
     },
     "init_cell": true
    },
@@ -38,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:56.769608Z",
-     "start_time": "2020-04-23T10:45:56.011437Z"
+     "end_time": "2020-04-23T13:08:40.849205Z",
+     "start_time": "2020-04-23T13:08:40.084566Z"
     },
     "init_cell": true
    },
@@ -60,8 +60,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:56.775509Z",
-     "start_time": "2020-04-23T10:45:56.771894Z"
+     "end_time": "2020-04-23T13:08:40.855420Z",
+     "start_time": "2020-04-23T13:08:40.851534Z"
     },
     "init_cell": true
    },
@@ -88,8 +88,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:56.779014Z",
-     "start_time": "2020-04-23T10:45:56.777100Z"
+     "end_time": "2020-04-23T13:08:40.859431Z",
+     "start_time": "2020-04-23T13:08:40.857047Z"
     },
     "init_cell": true
    },
@@ -104,8 +104,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.007372Z",
-     "start_time": "2020-04-23T10:45:56.780493Z"
+     "end_time": "2020-04-23T13:08:41.086051Z",
+     "start_time": "2020-04-23T13:08:40.860978Z"
     },
     "init_cell": true
    },
@@ -155,8 +155,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.012099Z",
-     "start_time": "2020-04-23T10:45:57.009954Z"
+     "end_time": "2020-04-23T13:08:41.090537Z",
+     "start_time": "2020-04-23T13:08:41.088415Z"
     },
     "init_cell": true
    },
@@ -171,8 +171,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.016542Z",
-     "start_time": "2020-04-23T10:45:57.013602Z"
+     "end_time": "2020-04-23T13:08:41.094846Z",
+     "start_time": "2020-04-23T13:08:41.092155Z"
     },
     "init_cell": true
    },
@@ -345,8 +345,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.021245Z",
-     "start_time": "2020-04-23T10:45:57.018208Z"
+     "end_time": "2020-04-23T13:08:41.099871Z",
+     "start_time": "2020-04-23T13:08:41.096403Z"
     },
     "init_cell": true
    },
@@ -427,8 +427,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.025761Z",
-     "start_time": "2020-04-23T10:45:57.022606Z"
+     "end_time": "2020-04-23T13:08:41.104571Z",
+     "start_time": "2020-04-23T13:08:41.101230Z"
     },
     "init_cell": true
    },
@@ -2557,8 +2557,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.031838Z",
-     "start_time": "2020-04-23T10:45:57.027132Z"
+     "end_time": "2020-04-23T13:08:41.530871Z",
+     "start_time": "2020-04-23T13:08:41.520423Z"
     },
     "init_cell": true
    },
@@ -2582,8 +2582,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.040875Z",
-     "start_time": "2020-04-23T10:45:57.033294Z"
+     "end_time": "2020-04-23T13:08:41.541038Z",
+     "start_time": "2020-04-23T13:08:41.533121Z"
     },
     "init_cell": true
    },
@@ -2613,8 +2613,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.048227Z",
-     "start_time": "2020-04-23T10:45:57.042470Z"
+     "end_time": "2020-04-23T13:08:41.548373Z",
+     "start_time": "2020-04-23T13:08:41.542730Z"
     },
     "init_cell": true
    },
@@ -2644,8 +2644,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T10:45:57.057729Z",
-     "start_time": "2020-04-23T10:45:57.049584Z"
+     "end_time": "2020-04-23T13:08:41.558199Z",
+     "start_time": "2020-04-23T13:08:41.550028Z"
     },
     "init_cell": true
    },
@@ -5601,14 +5601,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T20:15:47.492857Z",
-     "start_time": "2020-04-02T19:45:47.185Z"
+     "end_time": "2020-04-23T13:08:57.765141Z",
+     "start_time": "2020-04-23T13:08:57.758136Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_notebook()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "IPython.notebook.save_notebook()"
