New global variables show input file structure

--- a/Test - Ensenada U-V.ipynb
+++ b/Test - Ensenada U-V.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:42:09.557225Z",
-     "start_time": "2020-04-01T00:42:09.342823Z"
+     "end_time": "2020-04-27T04:43:00.640589Z",
+     "start_time": "2020-04-27T04:43:00.477687Z"
     }
    },
    "outputs": [],
@@ -17,27 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:50:55.505560Z",
-     "start_time": "2020-04-01T00:50:55.501158Z"
+     "end_time": "2020-04-27T04:43:00.650410Z",
+     "start_time": "2020-04-27T04:43:00.642833Z"
     }
    },
    "outputs": [],
    "source": [
-    "fname_fmt_ = \"/home/antonio/Tesis/Datasets_compressed/0/days/{}0_{:05d}.npz\"\n",
-    "fname_lon = \"/home/antonio/Tesis/Datasets_compressed/0/days/lon.txt\"\n",
-    "fname_lat = \"/home/antonio/Tesis/Datasets_compressed/0/days/lat.txt\""
+    "from spectral_analysis.preprocess.common_vars import LUIGI_OUT_FOLDER\n",
+    "fname_fmt_ = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/{}0_{:05d}.npz\"\n",
+    "fname_lon = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lon.txt\"\n",
+    "fname_lat = LUIGI_OUT_FOLDER+\"/Datasets_compressed/0/days/lat.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:50:57.524747Z",
-     "start_time": "2020-04-01T00:50:55.936155Z"
+     "end_time": "2020-04-27T04:43:02.384243Z",
+     "start_time": "2020-04-27T04:43:00.651770Z"
     }
    },
    "outputs": [
@@ -65,21 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:51:26.377855Z",
-     "start_time": "2020-04-01T00:51:24.774147Z"
+     "end_time": "2020-04-27T04:43:04.154143Z",
+     "start_time": "2020-04-27T04:43:02.385792Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x7f260659eef0>"
+       "<matplotlib.collections.PolyCollection at 0x7ffab3dfcb00>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,35 +103,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:45:13.678979Z",
-     "start_time": "2020-04-01T00:45:13.675490Z"
+     "end_time": "2020-04-27T04:43:04.159312Z",
+     "start_time": "2020-04-27T04:43:04.157110Z"
     }
    },
    "outputs": [],
    "source": [
-    "fname_fmt2_ = \"/home/antonio/Tesis/Datasets/787/days/{}0_{:05d}.txt\""
+    "fname_fmt2_ = LUIGI_OUT_FOLDER+\"/Datasets/787/days/{}0_{:05d}.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T00:45:58.679919Z",
-     "start_time": "2020-04-01T00:45:56.878114Z"
+     "end_time": "2020-04-27T04:43:06.265050Z",
+     "start_time": "2020-04-27T04:43:04.160864Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x7f260f5d60f0>"
+       "<matplotlib.collections.PolyCollection at 0x7ffab06ccf28>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
