Time slices and regions as modules

--- a/EBC_Spectra_Analysis.ipynb
+++ b/EBC_Spectra_Analysis.ipynb
@@ -90,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:48:53.710287Z",
-     "start_time": "2020-04-27T04:48:53.699282Z"
+     "end_time": "2020-05-04T05:08:29.172737Z",
+     "start_time": "2020-05-04T05:08:29.166626Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -109,21 +109,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[868, 852, 831, 809, 787, 762, 771, 750, 730, 709, 596, 572, 450, 602, 578, 533]\n",
+      "[762, 787, 809, 831, 852, 868, 709, 730, 750, 771, 450, 572, 596, 533, 578, 602]\n",
       "Hay un total de 16 espectros\n"
      ]
     }
    ],
    "source": [
-    "ids = []\n",
-    "ids_Cal = list(reversed([762, 787, 809, 831, 852, 868])) # California -- 23 to 51 N\n",
-    "ids_Can = list(reversed([709, 730, 750, 771])) # Canarias -- 16 to 36 N\n",
-    "ids_Peru = list(reversed([450, 572, 596])) #616,636  Peru Chile -- 5 to 45 S\n",
-    "ids_Ben = list(reversed([533, 578, 602])) #459,556, Benguela -- 15 to 37 S ** Quitamos la **459** y ponemos la 602\n",
-    "ids.extend(ids_Cal)\n",
-    "ids.extend(ids_Can)\n",
-    "ids.extend(ids_Peru)\n",
-    "ids.extend(ids_Ben)\n",
+    "from common_vars.regions import ids_Cal,ids_Can,ids_Peru,ids_Ben\n",
+    "ids = ids_Cal+ids_Can+ids_Peru+ids_Ben\n",
     "print(ids)\n",
     "print(\"Hay un total de {} espectros\".format(len(ids)))"
    ]
