--- a/RMS Ro Timeseries.ipynb
+++ b/RMS Ro Timeseries.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:55.948294Z",
-     "start_time": "2020-04-27T04:42:55.941621Z"
+     "end_time": "2020-05-04T05:24:43.967992Z",
+     "start_time": "2020-05-04T05:24:43.963277Z"
     },
     "init_cell": true
    },
@@ -26,26 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.164024Z",
-     "start_time": "2020-04-27T04:42:55.961164Z"
-    },
-    "init_cell": true
-   },
-   "outputs": [],
-   "source": [
-    "from spectral_analysis.preprocess.common_vars import OUT_IMGS_FOLDER,MODEL_FOLDER,LUIGI_OUT_FOLDER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.177480Z",
-     "start_time": "2020-04-27T04:42:57.168639Z"
+     "end_time": "2020-05-04T05:24:44.753079Z",
+     "start_time": "2020-05-04T05:24:43.971221Z"
     },
     "init_cell": true
    },
@@ -64,11 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.183462Z",
-     "start_time": "2020-04-27T04:42:57.179471Z"
+     "end_time": "2020-05-04T05:24:50.849089Z",
+     "start_time": "2020-05-04T05:24:44.755681Z"
+    },
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "from spectral_analysis.preprocess.common_vars import OUT_IMGS_FOLDER,MODEL_FOLDER,LUIGI_OUT_FOLDER\n",
+    "from common_vars.time_slices import idx_t\n",
+    "from common_vars.regions import ids_regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-04T05:24:50.859461Z",
+     "start_time": "2020-05-04T05:24:50.853087Z"
     },
     "init_cell": true
    },
@@ -83,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.189400Z",
-     "start_time": "2020-04-27T04:42:57.185354Z"
+     "end_time": "2020-05-04T05:24:50.864305Z",
+     "start_time": "2020-05-04T05:24:50.861355Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -103,71 +105,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.203600Z",
-     "start_time": "2020-04-27T04:42:57.193659Z"
+     "end_time": "2020-05-04T05:24:51.463870Z",
+     "start_time": "2020-05-04T05:24:50.865801Z"
     },
     "init_cell": true
    },
-   "outputs": [],
-   "source": [
-    "idx_t_JFM_days = [i for i in range(377) if i>=110 and i<201]\n",
-    "idx_t_JAS_days = [i for i in range(377) if i>=292]\n",
-    "idx_t_JFM_hours = [(24*i)+hr for i in range(377) if i>=110 and i<201 for hr in range(24)]\n",
-    "idx_t_JAS_hours = [(24*i)+hr for i in range(377) if i>=292  for hr in range(24)][:-18]\n",
-    "idx_t = {\n",
-    "\t\"days\": {\n",
-    "\t\t\"JFM\": idx_t_JFM_days,\n",
-    "\t\t\"JAS\": idx_t_JAS_days,\n",
-    "\t\t\"JFMJAS\": idx_t_JFM_days+idx_t_JAS_days\n",
-    "\t},\n",
-    "\t\"hours\": {\n",
-    "\t\t\"JFM\": idx_t_JFM_hours,\n",
-    "\t\t\"JAS\": idx_t_JAS_hours,\n",
-    "\t\t\"JFMJAS\": idx_t_JFM_hours+idx_t_JAS_hours\n",
-    "\t}\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.214574Z",
-     "start_time": "2020-04-27T04:42:57.207711Z"
-    },
-    "code_folding": [],
-    "init_cell": true
-   },
-   "outputs": [],
-   "source": [
-    "ids_Cal = [762, 787, 809, 831, 852, 868] # California -- 23 to 51 N\n",
-    "ids_Can = [709, 730, 750, 771] # Canarias -- 16 to 36 N\n",
-    "ids_Peru = [450, 572, 596] #616,636  Peru Chile -- 5 to 45 S\n",
-    "ids_Ben = [533, 578, 602] #459,556, Benguela -- 15 to 37 S ** Quitamos la **459** y ponemos la 602\n",
-    "ids_Kuro = [733, 751, 796]\n",
-    "ids_regions = {\n",
-    "    \"California\": list(reversed(ids_Cal)),\n",
-    "    \"Canarias\": list(reversed(ids_Can)),\n",
-    "    \"Peru\": list(reversed(ids_Peru)),\n",
-    "    \"Benguela\": list(reversed(ids_Ben)),\n",
-    "    \"Kuroshio\": list(reversed(ids_Kuro))\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-04-27T07:35:03.772Z"
-    },
-    "init_cell": true
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:  (face: 13, i: 2160, i_g: 2160, j: 2160, j_g: 2160, k: 90, k_l: 90, k_p1: 91, k_u: 90)\n",
+       "Coordinates:\n",
+       "  * i        (i) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
+       "  * i_g      (i_g) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
+       "  * j        (j) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
+       "  * j_g      (j_g) int64 0 1 2 3 4 5 6 7 ... 2153 2154 2155 2156 2157 2158 2159\n",
+       "  * k        (k) int64 0 1 2 3 4 5 6 7 8 9 10 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_u      (k_u) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_l      (k_l) int64 0 1 2 3 4 5 6 7 8 9 ... 80 81 82 83 84 85 86 87 88 89\n",
+       "  * k_p1     (k_p1) int64 0 1 2 3 4 5 6 7 8 9 ... 81 82 83 84 85 86 87 88 89 90\n",
+       "  * face     (face) int64 0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+       "    XC       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    YC       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    XG       (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    YG       (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    CS       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    SN       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    Z        (k) >f4 -0.5 -1.57 -2.79 -4.185 ... -5881.88 -6301.185 -6760.17\n",
+       "    Zp1      (k_p1) >f4 0.0 -1.0 -2.14 -3.44 ... -6082.07 -6520.3 -7000.04\n",
+       "    Zu       (k_u) >f4 -1.0 -2.14 -3.44 -4.93 ... -6082.07 -6520.3 -7000.04\n",
+       "    Zl       (k_l) >f4 0.0 -1.0 -2.14 -3.44 ... -5681.69 -6082.07 -6520.3\n",
+       "    rA       (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    dxG      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    dyG      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    Depth    (face, j, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    rAz      (face, j_g, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    dxC      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    dyC      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    rAw      (face, j, i_g) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    rAs      (face, j_g, i) >f4 dask.array<chunksize=(1, 2160, 2160), meta=np.ndarray>\n",
+       "    drC      (k_p1) >f4 0.5 1.07 1.22 1.395 ... 383.155 419.305 458.985 239.87\n",
+       "    drF      (k) >f4 1.0 1.14 1.3 1.49 1.7 ... 365.93 400.38 438.23 479.74\n",
+       "    PHrefC   (k) >f4 4.905 15.4017 27.3699 ... 57701.242 61814.625 66317.266\n",
+       "    PHrefF   (k_p1) >f4 0.0 9.81 20.9934 ... 59665.105 63964.145 68670.39\n",
+       "    hFacC    (k, face, j, i) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "    hFacW    (k, face, j, i_g) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "    hFacS    (k, face, j_g, i) >f4 dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "    maskC    (k, face, j, i) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "    maskW    (k, face, j, i_g) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "    maskS    (k, face, j_g, i) bool dask.array<chunksize=(1, 1, 2160, 2160), meta=np.ndarray>\n",
+       "Data variables:\n",
+       "    *empty*\n",
+       "Attributes:\n",
+       "    Conventions:  CF-1.6\n",
+       "    title:        netCDF wrapper of MITgcm MDS binary data\n",
+       "    source:       MITgcm\n",
+       "    history:      Created by calling `open_mdsdataset(extra_metadata=None, ll..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_ds = open_mdsdataset(MODEL_FOLDER+'/LLC2160/grid/', read_grid=True, iters=None, default_dtype=np.float32, geometry='llc')\n",
     "grid_ds"
@@ -178,10 +182,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.241531Z",
-     "start_time": "2020-04-27T04:42:55.929Z"
-    },
-    "init_cell": true
+     "start_time": "2020-05-04T04:39:24.460Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -192,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.242639Z",
-     "start_time": "2020-04-27T04:42:55.936Z"
+     "end_time": "2020-05-04T05:24:51.469418Z",
+     "start_time": "2020-05-04T05:24:51.465287Z"
     },
     "init_cell": true
    },
@@ -216,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.243484Z",
-     "start_time": "2020-04-27T04:42:55.943Z"
+     "end_time": "2020-05-04T05:24:51.475636Z",
+     "start_time": "2020-05-04T05:24:51.470955Z"
     },
     "init_cell": true
    },
@@ -250,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.244544Z",
-     "start_time": "2020-04-27T04:42:55.950Z"
+     "end_time": "2020-05-04T05:24:51.480910Z",
+     "start_time": "2020-05-04T05:24:51.477001Z"
     },
     "init_cell": true
    },
@@ -276,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.245528Z",
-     "start_time": "2020-04-27T04:42:55.957Z"
+     "end_time": "2020-05-04T05:24:51.485140Z",
+     "start_time": "2020-05-04T05:24:51.482296Z"
     },
     "init_cell": true
    },
@@ -292,11 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.246619Z",
-     "start_time": "2020-04-27T04:42:55.963Z"
+     "end_time": "2020-05-04T05:24:51.492989Z",
+     "start_time": "2020-05-04T05:24:51.486593Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -327,11 +329,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.247650Z",
-     "start_time": "2020-04-27T04:42:55.973Z"
+     "end_time": "2020-05-04T05:24:51.500301Z",
+     "start_time": "2020-05-04T05:24:51.496450Z"
     },
     "init_cell": true
    },
@@ -352,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.248758Z",
-     "start_time": "2020-04-27T04:42:55.981Z"
+     "end_time": "2020-05-04T05:24:51.511526Z",
+     "start_time": "2020-05-04T05:24:51.502005Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -426,8 +428,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.249874Z",
-     "start_time": "2020-04-27T04:42:55.991Z"
+     "end_time": "2020-05-04T04:55:44.987988Z",
+     "start_time": "2020-05-04T04:55:44.955518Z"
     },
     "scrolled": true
    },
@@ -437,13 +439,13 @@
     "fps = 3 if t_r == \"days\" else 6\n",
     "for current,ids in ids_regions.items():\n",
     "\tif current==\"California\":\n",
-    "\t\tfor season in [\"JAS\",\"JFM\"]:\n",
+    "\t\tfor season in [\"ASO\",\"JFM\"]:\n",
     "\t\t\ttimes = idx_t[t_r][season]\n",
     "\t\t\tn_times = len(times)\n",
     "\t\t\t#o_d = {r_id:[None]*n_times for r_id in ids}\n",
     "\t\t\tprint(current,season)\n",
     "\t\t\tfname_gif = '{}/rms_ro_all_{}_{}.gif'.format(OUT_IMGS_FOLDER,current,season)\n",
-    "\t\t\tPath(fname_gif).mkdir(parents=True, exist_ok=True)\n",
+    "\t\t\tPath(fname_gif).parent.mkdir(parents=True, exist_ok=True)\n",
     "\t\t\timageio.mimsave(fname_gif, \n",
     "\t\t\t\t\t\t\t(savefig(plot_ro_region_t,current,idx_t,times,t_r,norm=False,absolute=False) for idx_t in range(n_times)), \n",
     "\t\t\t\t\t\t\t fps=fps,loop=10)\n",
@@ -460,11 +462,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.251101Z",
-     "start_time": "2020-04-27T04:42:56.003Z"
+     "end_time": "2020-05-04T05:24:51.516508Z",
+     "start_time": "2020-05-04T05:24:51.512885Z"
     },
     "init_cell": true
    },
@@ -482,11 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.252118Z",
-     "start_time": "2020-04-27T04:42:56.008Z"
+     "end_time": "2020-05-04T05:24:51.531176Z",
+     "start_time": "2020-05-04T05:24:51.517901Z"
     },
     "code_folding": [
      2
@@ -570,15 +572,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.253131Z",
-     "start_time": "2020-04-27T04:42:56.019Z"
+     "end_time": "2020-05-04T04:55:44.991195Z",
+     "start_time": "2020-05-04T04:55:44.773Z"
     },
     "code_folding": [],
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for current,season in product(ids_regions.keys(),[\"JFM\",\"JAS\"]):\n",
+    "for current,season in product(ids_regions.keys(),[\"JFM\",\"ASO\"]):\n",
     "\tprint(current,season)\n",
     "\troRmsByCurrent(current,season,\"hours\")"
    ]
@@ -592,11 +594,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.254231Z",
-     "start_time": "2020-04-27T04:42:56.030Z"
+     "end_time": "2020-05-04T05:02:55.440390Z",
+     "start_time": "2020-05-04T05:02:55.424251Z"
     }
    },
    "outputs": [],
@@ -617,7 +619,7 @@
     "\trv_norm = rv_(U,V,DX,DY)/F\n",
     "\t#\n",
     "\tfname_gif = '{}/rv_{}_{}.gif'.format(OUT_IMGS_FOLDER,r_id,season)\n",
-    "\tPath(fname_gif).mkdir(parents=True, exist_ok=True)\n",
+    "\tPath(fname_gif).parent.mkdir(parents=True, exist_ok=True)\n",
     "\timageio.mimsave(fname_gif, \n",
     "\t\t\t\t\t(savefig(plot_rv,rv_norm[i,:,:],LON,LAT) for i in range(nt)), \n",
     "\t\t\t\t\t fps=3,loop=10)\n",
@@ -626,14 +628,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T04:42:57.255283Z",
-     "start_time": "2020-04-27T04:42:56.036Z"
+     "end_time": "2020-05-04T05:05:42.962186Z",
+     "start_time": "2020-05-04T05:02:56.289180Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved! /home/antonio/GoogleDrive/Tesis/data/output_images/rv_730_JFM.gif\n"
+     ]
+    }
+   ],
    "source": [
     "anim_rv(730,'JFM')"
    ]
